syntax = "proto3";
package job.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

import "job/v1/job.proto";
import "job/v1/schema.proto";

option go_package = "github.com/jeffrom/job-manager/pkg/job";


message Queue {
  string id = 1;
  int32 concurrency = 2;
  int32 retries = 3;
  google.protobuf.Duration duration = 4;
  map<string, string> labels = 5;
  Schema schema = 6;

  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp deleted_at = 9;
}

message Queues {
  repeated Queue queues = 1;
}

message QueueListParams {
  repeated string names = 1;
  repeated string selectors = 2;
}
